@@ -1,3 +1,9 @@
+2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs:
+	* MonoDevelop.AddinAuthoring/AddinDescriptionDisplayBinding.cs:
+	Track api changes.
+
 2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.AddinAuthoring/AddinData.cs:
